Trying to get sample to work

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div>
-	<link rel="stylesheet" href="components/todomvc-common/base.css">
+<!-- 	<link rel="stylesheet" href="components/todomvc-common/base.css"> -->
 	<script type="text/x-handlebars" data-template-name="todos">
 		<section id="todoapp">
 			<header id="header">
@@ -58,5 +58,4 @@
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 	</script>
-	<script src="components/todomvc-common/base.js"></script>
 </div>
