--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
 	<head>
 		<meta charset="utf-8">
 		<title>ember.js • TodoMVC</title>
+		<meta name="msapplication-square70x70logo" content="favicons/windows-tile-70x70.png">
+    <meta name="msapplication-square150x150logo" content="favicons/windows-tile-150x150.png">
+    <meta name="msapplication-square310x310logo" content="favicons/windows-tile-310x310.png">
+    <meta name="msapplication-TileImage" content="favicons/windows-tile-144x144.png">
+    <meta name="msapplication-TileColor" content="#000000">
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="favicons/apple-touch-icon-152x152-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="favicons/apple-touch-icon-120x120-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="favicons/apple-touch-icon-76x76-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="favicons/apple-touch-icon-60x60-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="favicons/apple-touch-icon-144x144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="favicons/apple-touch-icon-114x114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="favicons/apple-touch-icon-72x72-precomposed.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-touch-icon.png">
+    <link rel="shortcut icon" href="favicons/favicon.ico">
+    <link rel="icon" type="image/png" sizes="64x64" href="favicons/favicon.png">
+
 		<link data-aero-build="debug" rel="stylesheet" href="bower_components/todomvc-common/base.css">
 		<link data-aero-build="release" rel="stylesheet" href="dist/app.min.css">
 	</head>
